--- a/index.html
+++ b/index.html
@@ -5,7 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina web</title>
 </head>
+
 <body>
-    <h1>Mi primera pagina</h1>
+    <h1>Esta es mi primera pagina web</h1>
+    <hr>
+    <h2>Presentacion</h2>
+
+    <p><mark>Lorem ipsum dolor</mark> sit amet consectetur adipisicing elit.
+        Tempora commodi velit magni perferendis <b>alias optio</b> autem magnam impedit possimus quasi odit,
+        illo veritatis minus ipsum inventore accusamus, <u>dolorem error molestias</u>?</p>
+
+    <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</i></p>
+    <hr>
+    <h2>Medios favoritos</h2>
+    <p>Estas son las 3 paginas que mas utilizo para encontrar soluciones a problemas de desarrollo web</p>
+    <ul>
+        <li><a href="https://developer.mozilla.org/" target="_blank">developer.mozilla.org </a></li>
+        <li><a href="https://medium.com/" target="_blank">medium.com</a></li>
+        <li><a href="https://es.stackoverflow.com/" target="_blank">stackoverflow.com</a></li>
+    </ul>
+    <p>Estas paginas son interesantes para practicar y aprender sobre programacion</p>
+    <ol>
+        <li><a href="https://www.w3schools.com/" target="_blank">w3schools.com</a></li>
+        <li><a href="https://www.freecodecamp.org/" target="_blank">freecodecamp.org</a></li>
+        <li><a href="https://www.codecademy.com/" target="_blank">codecademy.com</a></li>
+    </ol>
+    <hr>
+    <h2>Galeria de imagenes</h2>
+    <img src="imagenes\messi.jpg">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsT6DmAvSXKSF0U55m3w3RH10YVRV8GrkNlg&usqp=CAU">
+    <img src="imagenes/matigimenez.jpg">
 </body>
 </html>
