--- a/U2P01/index.html
+++ b/U2P01/index.html
@@ -32,8 +32,8 @@
     </ol>
     <hr>
     <h2>Galeria de imagenes</h2>
-    <img src="imagenes\messi.jpg">
+    <img src="img/messi.jpg">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsT6DmAvSXKSF0U55m3w3RH10YVRV8GrkNlg&usqp=CAU">
-    <img src="imagenes/matigimenez.jpg">
+    <img src="img/matigimenez.jpg">
 </body>
 </html>
