--- a/U2P02/login.html
+++ b/U2P02/login.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio sesion</title>
 </head>
+
 <body>
-    <h1>Titulo</h1>
-    <p>Por favor, sigue estos pasos para iniciar sesión:</p>
+    <div>
+        <h1>Titulo</h1>
+        <p>Por favor, sigue estos pasos para iniciar sesión:</p>
+    </div>
 
-    <form>
-        <label for="usuario">Usuario:</label>
-        <input type="text" id="usuario" name="usuario" required>
-        <br><br>
-        
-        <label for="clave">Contraseña:</label>
-        <input type="password" id="clave" name="clave" required>
-        <br><br>
+    <div>
+        <form>
+            <label for="usuario">Usuario:</label>
+            <input type="text" id="usuario" name="usuario" required>
+            <br><br>
 
-        <input type="checkbox" id="recordar" name="recordar">
-        <label for="recordar">Recordar datos</label>
-        <br><br>
+            <label for="clave">Contraseña:</label>
+            <input type="password" id="clave" name="clave" required>
+            <br><br>
 
-        <input type="submit" value="Iniciar Sesión">
-    </form>
+            <input type="checkbox" id="recordar" name="recordar">
+            <label for="recordar">Recordar datos</label>
+            <br><br>
+
+            <input type="submit" value="Iniciar Sesión">
+        </form>
+    </div>
 </body>
 </body>
+
 </html>
