--- a/U2P02/perfil.html
+++ b/U2P02/perfil.html
@@ -74,6 +74,7 @@
                 <option value="verduras">Verduras</option>
                 <option value="milanesas">Milanesas</option>
                 <option value="hamburguesas">Hamburguesas</option>
+                <option value="sushi">Sushi</option>
             </select>
             <label>
                 <input type="checkbox" id="recordar-gustos" name="recordar-gustos">Recordar mis datos
