--- a/U02P01/index.html
+++ b/U02P01/index.html
@@ -32,7 +32,7 @@
     </ol>
     <hr>
     <h2>Galeria de imagenes</h2>
-    <img src="img/messi.jpg">
+    <img src="img\messi.jpg">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsT6DmAvSXKSF0U55m3w3RH10YVRV8GrkNlg&usqp=CAU">
     <img src="img/matigimenez.jpg">
 </body>
